Refactor environment variable handling and update user schema
- Replaced `getEnvOrThrow` utility with a new configuration module using `zod` for environment variable validation.
- Updated `drizzle.config.ts`, `src/db/index.ts`, and `src/index.ts` to use the new `env` configuration.
- Changed user schema from `clerkUserId` to `firebaseUid` in `src/db/schema.ts` and updated related indexes.
- Removed unused `auth.ts` route and `utils/index.ts` file.
- Added SQL migration script to rename column and update indexes in the database.
- Created a new snapshot file for the database schema.

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@clerk/backend": "^2.29.0",
-    "@hono/clerk-auth": "^3.0.3",
     "@libsql/client": "^0.15.15",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "firebase-admin": "^13.6.0",
     "hono": "^4.11.3",
-    "uuidv7": "^1.1.0"
+    "uuidv7": "^1.1.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
