feat: integrate Upstash for Redis caching and QStash for background processing
- Added Upstash Redis and QStash dependencies to the project.
- Updated environment configuration to include Upstash Redis and QStash settings.
- Implemented caching service with write-behind strategy using Redis and QStash for user data.
- Created authentication service to handle user signup, login, and profile management with Firebase.
- Developed internal routes for syncing data from Redis to the database via QStash.
- Added middleware for authentication and error handling in the API.
- Established user routes for signup, login, profile updates, and password management.
- Implemented database service for processing write jobs from QStash and syncing to Turso.
- Enhanced API with health check and error response handling.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.6",
     "@libsql/client": "^0.15.15",
+    "@upstash/qstash": "^2.8.4",
+    "@upstash/redis": "^1.36.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "firebase-admin": "^13.6.0",
